--- a/prj2/01_互联网协议实验_王泽黎_2022K8009929011.md
+++ b/prj2/01_互联网协议实验_王泽黎_2022K8009929011.md
@@ -13,4 +13,81 @@
 2. 调研并解释这个过程  
 3. 理解相关协议的封装  
 
-### 二、
+### 二、实验流程
+
+1. 在终端上执行sudo mn --nat，将host连接至Internet，启动mininet  
+2. 在mininet中输入xterm h1，打开h1的终端
+3. 在h1终端中输入echo "nameserver 1.2.4.8" > /etc/resolv.conf，设置DNS服务器
+4. 在h1终端中输入wireshark &，打开wireshark
+5. 在wireshark中选择h1-eth0，开始抓包
+6. 在h1终端中输入wget www.ucas.ac.cn，观察wireshark的抓包过程
+7. 调研分析抓包过程以及所得的几种互联网协议
+
+### 三、实验结果与分析
+
+#### （一）wireshark抓包过程
+
+![wireshark抓包过程](./img/wireshark抓包过程.png)  
+
+#### （二）ARP协议层次
+
+![ARP协议层次](./img/ARP.png)  
+分析结果为：Ethernet < ARP
+
+#### （三）DNS协议层次
+
+![DNS协议层次](./img/DNS.png)  
+分析结果为：Ethernet < IP < UDP < DNS
+
+#### （四）TCP协议层次
+
+![TCP协议层次](./img/TCP.png)  
+分析结果为：Ethernet < IP < TCP
+
+#### （五）HTTP协议层次
+
+![HTTP协议层次](./img/HTTP.png)  
+分析结果为：Ethernet < IP < TCP < HTTP
+
+#### （六）结果分析
+
+在获取UCAS官网的过程中，wireshark抓包得到了ARP、DNS、TCP、HTTP等协议的封装层次：  
+&nbsp;&nbsp;&nbsp;&nbsp;1. ARP协议层次为Ethernet < ARP
+&nbsp;&nbsp;&nbsp;&nbsp;2. DNS协议层次为Ethernet < IP < UDP < DNS
+&nbsp;&nbsp;&nbsp;&nbsp;3. TCP协议层次为Ethernet < IP < TCP
+&nbsp;&nbsp;&nbsp;&nbsp;4. HTTP协议层次为Ethernet < IP < TCP < HTTP
+
+从wireshark抓包结果看出TCP承载HTTP协议  
+![TCP承载HTTP协议](./img/TCP承载HTTP协议.jpg)
+
+### 四、调研分析
+
+#### （一）ARP（地址解析协议）
+
+ARP协议“Address Resolution Protocol”(地址解析协议)的缩写。其作用是在以太网环境中,数据的传输所依懒的是MAC地址而非IP地址,而将已知IP地址转换为MAC地址的工作是由ARP协议来完成的。  
+
+在局域网中,网络中实际传输的是“帧”,帧里面是有目标主机的MAC地址的。在以太网中,一个主机和另一个主机进行直接通信,必须要知道目标主机的MAC地址。目标MAC地址是通过地址解析协议获得的。所谓“地址解析”就是主机在发送帧前将目标IP地址转换成目标 MAC 地址的过程。ARP 协议的基本功能就是通过目标设备的 IP 地址,查询目标设备的MAC地址,以保证通信的顺利进行。ARP通过发送一个ARP请求帧到局域网中的所有设备来查找目标设备的MAC地址。这个请求包含源设备的IP地址和MAC地址。目标设备收到请求后，会回复一个包含其IP地址和MAC地址的ARP响应帧。
+
+#### （二）DNS（域名系统）
+
+DNS (Domain Name System)是一个应用层协议，域名系统(DNS)的作用是将人类可读的域名(如 www.example.com)转换为机器可读的IP地址(如192.0.2.44)。 DNS系统使用树状层次结构，包括多个 DNS 服务器，它们负责不同的域名解析。当用户输入一个域名时，客户端的DNS解析器将向根DNS服务器发送查询，然后逐级查询更低级别的DNS服务器，直到找到与域名相关的IP地址。
+
+DNS协议建立在UDP或TCP协议之上,默认使用53号端口。客户端默认通过UDP协议进行通讯,但是由于广域网中不适合传输过大的 UDP 数据包,因此规定当报文长度超过了512 字节时,应转换为使用TCP协议进行数据传输。DNS是一种可以将域名和IP地址相互映射的以层次结构分布的数据库系统。
+
+#### （三）TCP（传输控制协议）
+
+TCP (Transmission Control Protocol 传输控制协议)是一种面向连接的、可靠的、基于字节流的传输层通信协议,由IETF的RFC 793定义。在简化的计算机网络OSI模型中,它完成第四层传输层所指定的功能。 
+
+应用层向TCP层发送用于网间传输的、用8位字节表示的数据流,然后TCP把数据流分区成适当长度的报文段(通常受该计算机连接的网络的数据链路层的最大传输单元(MTU)的限制) 。之后TCP把结果包传给IP层,由它来通过网络将包传送给接收端实体的TCP层。TCP将用户数据打包构成报文段,它发送数据时启动一个定时器,另一端收到数据进行确认,对失序的数据重新排序,丢弃重复的数据。简单说, TCP协议的作用是,保证数据通信的完整性和可靠性，防止丢包。
+
+#### （四）HTTP（超文本传输协议）
+
+HTTP协议(超文本传输协议HyperText Transfer Protocol),它是基于TCP协议的应用层传输协议,用于从WWW服务器传输超文本到本地浏览器的传输协议, HTTP是一个应用层协议,由请求和响应构成,是一个标准的客户端和服务器模型,简单来说就是客户端和服务端进行数据传输的一种规则。它指定了客户端可能发送给服务器什么样的消息以及得到什么样的响应。客户端发送HTTP请求到服务器，请求特定资源（如网页或图像）。服务器收到请求后，会发送HTTP响应，包含请求的资源以及相关信息。HTTP通信通常是无状态的，每个请求和响应都独立于之前的请求和响应。
+
+### 五、实验总结
+
+通过本次实验，我了解了互联网协议的封装过程，掌握了wireshark的使用方法，对ARP、DNS、TCP、HTTP等协议的封装层次有了更深入的了解。同时，我还调研了这几种协议的作用和功能，对互联网协议的工作原理有了更深入的认识。
+
+---
+
+## 实验二：流完成时间实验
